# Solana-Indexer-rs

./: .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
migrations/: 20260404000000_init.sql  20260406000000_performance.sql
src/: config.rs  main.rs  metrics.rs
src/api/: handlers.rs  mod.rs
src/db/: connection.rs  queries.rs
src/grpc/: client.rs  stream.rs
src/models/: account.rs  transaction.rs
src/processor/: filters.rs  mod.rs  transaction.rs
src/workers/: queue.rs
