[package]
name = "solana-indexer"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full"] }
tonic = { version = "0.14", features = ["transport", "tls-native-roots", "tls-ring"] }

sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "macros", "runtime-tokio-rustls", "chrono"] }

dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

bs58 = "0.5.1"
tokio-stream = { version = "0.1", features = ["net"] }

yellowstone-grpc-proto = "12.1.0"
chrono = { version = "0.4", features = ["serde"] }
colored = "2"
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
